fix y  white space

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -39,6 +39,10 @@
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   transform: translateY(-7px);
 }
+.contact-container{
+margin-bottom: 30px;
+margin-top: 20px;
+}
 
 .contact{
   display: inline-block;
@@ -47,10 +51,10 @@
   opacity: 0.89;
   height: 89px;
   width: 300px;
-  margin-top: 50px;
+  margin-top: 15px;
   margin-left: 7px;
   margin-right: 7px;
-  margin-bottom: 40px;
+  margin-bottom: 15px;
   padding: 15px;
   cursor: pointer;
   transition: box-shadow 0.2s ease-in;
