--- a/app/assets/stylesheets/logixRelease.scss
+++ b/app/assets/stylesheets/logixRelease.scss
@@ -195,10 +195,10 @@ a.btn.btn-outline-danger {
   display: inline-block;
   width: 200px;
   height: 100px;
-  margin-top: 50px;
+  margin-top: 27px;
   margin-left: 30px;
   margin-right: 30px;
-  margin-bottom: 40px;
+  margin-bottom: 27px;
   text-align: center;
 }
 
